Website/plugins/ogdenwebb/scss/themes/_themes-template-common.scss
@import "../base/_variables.scss";

// Common template for every custom theme
html {
  background: $background;
}

body {
  background: $background;
  color: $text;
}

.navbar-logo-tm {
  color: $text-strong;
}

/* Site header */
.navbar {
  background: $navbar-background-color;
  border-bottom: 1px solid $border-light;
}

.navbar a {
  color: $link;

  &:hover {
    color: $link;
    text-decoration: none;
  }

  &:visited {
    color: $link;
  }
}

a.navbar-item:hover, {
  background: $navbar-item-hover-background-color;
}

.navbar-item.has-dropdown:focus .navbar-link, .navbar-item.has-dropdown:hover .navbar-link, .navbar-item.has-dropdown.is-active .navbar-link {
  background-color: $navbar-item-hover-background-color;
}

.navbar-dropdown {
  background-color: $navbar-dropdown-background-color;
  border-top: $navbar-dropdown-border-top;
}

.navbar-link:not(.is-arrowless)::after {
  border-color: $navbar-dropdown-arrow;
}

.navbar-divider {
  background-color: $navbar-divider-background-color;
}

.navbar-menu {
  background-color: $navbar-dropdown-background-color;
}

.navbar-dropdown a.navbar-item:focus, .navbar-dropdown a.navbar-item:hover,
a.navbar-item:focus-within, a.navbar-item.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, .navbar-link.is-active {
  background-color: $navbar-dropdown-item-hover-background-color;
  color:  $navbar-dropdown-item-hover-color;
}


#query::placeholder {
  color: $input-placeholder-color;
}

// Autocompletion popup
.navbar-search-autocomplete {
  color: darken($text, 10);
  background-color: $scheme-main-ter;
  box-shadow: $shadow;
  border: 1px solid $border;

  li {
    padding: 0 5px;
    &.ui-autocomplete-category {
        color: $red;
        font-weight: $weight-semibold;
    }
    &:hover, &[aria-selected="true"] {
      cursor: pointer;
      background-color: darken($scheme-main-ter, 5);
    }

    mark {
      background: transparent;
      color: rgba(255, 122, 122, 1);
      font-weight: bold;
    }
  }

  .autocomplete-result-category {
    // background-color: $heading;
    color: $heading;
    // border-top: 1px solid $border;
    // border-bottom: 2px solid $border;

    &:hover {
      background-color: unset;
    }
  }
}


a {
  color: $link;

  &:hover {
    color: $link;
    text-decoration: underline;
  }

  &:visited {
    color: $purple;
  }
}


// Forms
.button.is-primary {
  background-color: $primary !important;

  &:hover {
    background-color: $primary-dark !important;
    text-decoration: none;
  }
}

.label {
  color: $label-color;
}

.input, .textarea, .select select {
  background-color: $form-background;
  border-color: $border;
  color: $text;
}

.input:hover, .textarea:hover, .select select:hover, .is-hovered.input, .is-hovered.textarea, .select select.is-hovered {
  border-color: $border-hover;
}

.input:focus, .textarea:focus, .select select:focus, .is-focused.input, .is-focused.textarea, .select select.is-focused, .input:active, .textarea:active, .select select:active, .is-active.input, .is-active.textarea, .select select.is-active {
  border-color: $link;
}

// Arrow
.select:not(.is-multiple):not(.is-loading)::after {
  border-color: $primary;
}

.select:not(.is-multiple):not(.is-loading):hover::after {
  border-color: $primary;
}

/* Site footer */
.footer {
  background: $footer-background-color;
  border-top: 1px solid $border-light;
  z-index: 50;
}


// Redifine text colors
.has-text-primary {
  color: $primary !important;
}

.has-text-dark {
  color: $dark !important;
}

.has-text-danger {
  color: $red !important;
}

.has-text-danger:hover {
  color: $red !important;
}

a.has-text-red, a.has-text-red:hover {
  color: $red;
}

.button.is-link {
  background-color: $link;
}

.button.is-link:hover {
  background-color: $link-hover;
}

strong {
  color: $text-strong;
}

.raku.links-block {
  .head {
    color: $heading-mono;
  }

  a {
    color: $primary;

    &:hover {
      color: $primary-dark;
    }
  }
}

/* Hopepage title */
.hero-body {
  background: $homepage-gradient;
  mix-blend-mode: normal;
}


/* Raku page template */
.raku.page-title {
  color: $heading;
}

.raku.page-header .page-edit {
  color: $grey-dark;

  .page-edit-button {
    background: $scheme-main-ter;
    color: $text-dark;
    border-color: $border;

    &:hover {
      background: $scheme-main-bis;
    }
  }
}

/* Raku search page */
.raku-search {
  .search-category {
    background: $scheme-main-ter;
    border: 1px solid $border;
    box-shadow: $shadow-below;
    color: $text;
  }

  .search-match {
    background: $search-match;
  }

  .search-category-title {
    color: $heading;
    border-bottom: 1px solid $border;
  }
}

/* Categories */
.raku-category.category-block {
  border: 1px solid $border;
  border-bottom: 5px solid $border-light;
  box-shadow: $shadow-below;

}

.raku-category {
  .category-header {
    background: $block-heading-background;
    border-bottom: 1px solid $border;
    color: $grey-dark;
  }

  .category-item:not(:last-child) {
    border-bottom: 1px solid $border;
  }
}

/* Programs page template */
.raku-programs {
  .programs-item-title {
    border-bottom: 1px solid $border;
  }
}


/* Raku headings */
.raku-h1 {
  background: $scheme-main-bis;
  border: 1px solid $border;
  border-bottom: 3px solid $heading;
}

.raku-h2 {
  border-bottom: 3px solid $heading;
}

.raku-h1, .raku-h2, .raku-h3, .raku-h4, .raku-h5, .raku-h6 {
  colors: $heading;

  a {
    color: $heading;
  }

  code {
    color: unset;
    background: unset;
    font-weight: $weight-semibold;
  }
}

.raku-h1 a:hover, .raku-h2 a:hover, .raku-h3 a:hover, .raku-h4 a:hover, .raku-h5 a:hover, .raku-h6 a:hover {
  color: $primary;

  text-decoration: none;
}

.raku-anchor {
  color: $grey-darker;
}

a.raku-anchor:hover {
  color: $primary;
}

a.raku-anchor,
.raku-h1 a.raku-anchor, .raku-h2 a.raku-anchor, .raku-h3 a.raku-anchor, .raku-h4 a.raku-anchor, .raku-h5 a.raku-anchor, .raku-h6 a.raku-anchor {
  color: $text-dark;

  &:hover {
    color: $primary;
  }
}

.raku-h1:hover a.raku-anchor, .raku-h2:hover a.raku-anchor, .raku-h3:hover a.raku-anchor, .raku-h4:hover a.raku-anchor, .raku-h5:hover a.raku-anchor, .raku-h6:hover a.raku-anchor {
  visibility: visible;
}

/* Version note */
.raku.version-note {
  background: $grey-lightest;
  border: 1px solid $border;
  box-shadow: $shadow-below;
}

.version-note-header {
  color: $heading;
}

// Tables
.table {
  background-color: $scheme-main;
  box-shadow: $shadow-below;
  color: $table-color;
}

.table thead td, .table thead th {
  color: $table-head-cell-color;
}

.table td, .table th {
  border: 1px solid $table-cell-border;
}

.card {
  color: $text;
  background-color: $background;
}

// About page
.raku-about .card {
  border: 1px solid $grey-lighter;
  border-bottom: 3px solid $grey-lighter;
  box-shadow: $shadow;
}

// Tabs
.raku.tabs {
  background: $scheme-main-ter;
  border: 1px solid $border;
  border-bottom: unset;
  color: $tabs-link-color;

  ul {
    border-color: $border;
  }

  a {
    color: $tabs-link-color;
  }

  &.is-boxed a:hover {
    background-color: $tabs-boxed-link-hover-background-color;
    color: $tabs-link-hover-color;
  }

  &.is-boxed a {
    border-right: 1px solid $border;
  }

  &.is-boxed li.is-active a {
    background: $tabs-boxed-link-active-background-color;
    color: $tabs-link-active-color;
    border-top: 1px solid transparent;
    border-right: 1px solid $border;
    border-bottom: 1px solid $border;
  }
}

// Text & other stuff
p > code {
  background-color: $code-background;
  border: 1px solid lighten($code-background, 5);
}

// Sidebar module
.raku-sidebar {
  background-color: $scheme-main-bis;
  border-right: 1px solid $border;
  border-bottom: 3px solid $border;
  // box-shadow: $sidebar-shadow; // delete

  .input::placeholder, .textarea::placeholder, .select select::placeholder {
    color: $text-dark;
  }

  .menu-list {
    ::marker {
      color: $heading;
    }

    li ul {
      border-left: 1px solid $border;
    }

    a {
      color: $text;


      &:hover {
        background: $menu-item-hover-background-color;
        text-decoration: none;
      }

      &.is-active {
        color: $text-invert;

        &:hover {
          background: $primary;
        }
      }

    }
  }
}

// Alt sidebar
.raku-sidebar.category-sidebar {
  li a.is-active {
    background-color: $menu-item-active-background-color;
    border-left: 3px solid $link;
  }

  a {
    &.is-active {
      color: $text;

      &:hover {
        background: $menu-item-active-background-color;
      }
    }
  }
}

// Alt sidebar with bottom border
// .raku-sidebar.category-sidebar {

//  li a {
//    border-bottom: 1px solid $border;
//  }

//  li a.is-active {
//    background-color: $scheme-main-bis;
//    // border-bottom: 3px solid $link;
//   }
// }


// Raku code
a > code {
  color: $link;
}

code {
  background-color: $scheme-main-bis;
  color: $heading;
}

.raku-code {
  border-bottom: 3px solid $border;
  box-shadow: $shadow-below;
  border: 1px solid $border;

  .code-button {
    background: $primary;
    color: $scheme-main;
    border: $border;

    &:hover {
      background-color: $primary-dark;
    }
  }

  .code-name {
    color: $heading;
  }

  .code-output {
    background: $code-output-background;
    border-top: 1px solid $border;
  }

  .code-output-title {
    border-bottom: 1px solid $border;
    color: $heading;
  }

  pre {
    background-color: $code-background;
    color: $code-foreground;
  }
}

// Error pages.
.hero.error-page .hero-body {
  background: $background;

}

.error-icon .icon {
  color: $text;
}

.hero .error-title {
  color: $red;
}

dl {
    margin: 5px;
    dt {
        font-weight: $weight-semibold;
    }
    dd {
        margin: 5px auto 10px 10px
    }
}

ul.rakudoc-item {
    list-style: disc;
    padding: 0 0 0 $size-4;
    > ul {
        margin-left: 2em;
        list-style: circle;
        > ul {
            margin-left: 2em;
            list-style: square;
            > ul {
                margin-left: 2em;
                list-style: disclosure-closed;
            }
        }
    }
}

